--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
     <div class="col-sm-2">
         <div id="componentsBox" class='componentsBox' [dragula]='"choose-component"'>
-           <div draggable="true" class="container_"> Container</div>
-           <div draggable="true" class="select_"> Select </div>
-           <div draggable="true" class="multselec_"> Multiple Select</div>
+           <div data-component-name="container-component"> Container</div>
+           <div data-component-name="select-component"> Select </div>
+           <div data-component-name="multselect-component"> Multiple Select</div>
         </div>
       </div>
