hotfix add mutiple container

--- a/src/app/components/container/container.component.html
+++ b/src/app/components/container/container.component.html
@@ -1,1 +1,1 @@
-<div class='well' data-is-child-container="yes" id="container_{{timestamp}}" [dragula]='"choose-component"'><div data-id="{{timestamp}}" #childcontainer ></div></div>
+<div class='well componentClass' #getELement (click)='chooseContainer($event)' data-is-child-container="yes" id="container_{{timestamp}}" [dragula]='"choose-component"'><div data-id="{{timestamp}}" #childcontainer ></div></div>
