first comit for preview pages

--- a/src/app/components/select/select.component.html
+++ b/src/app/components/select/select.component.html
@@ -1,9 +1,1 @@
-<div class="selectTag">
-  <label></label>
-  <div class="selectCover" id="select_{{timestamp}}">
-    <div class="selectLabel"> Title Here</div>
-    <select>
-      <option>No Options</option>
-    </select>
-  </div>
-</div>
+<div class="selectTag"><label></label><div class="selectCover" id="select_{{timestamp}}"><div class="selectLabel"> Title Here</div><select><option>No Options</option></select></div></div>
