--- a/src/app/components/editor/editor.component.html
+++ b/src/app/components/editor/editor.component.html
@@ -3,20 +3,13 @@
     <div class="row">
         <div class="backgroundEditor">
           <h2>DEMO</h2>
-
-         
-          <!-- Trigger a button -->
           <button  class="green" (click)='saveHTMlToJson($event)' id="preview">Preview</button>
           <button class="blue">Save</button>
-
-          <div class="editorBox" #getHTML id="bodyHTML" class="bodyHTML" [dragula]='"choose-component"'>
-              <div #editorBox style="display:none" ></div>
-          </div>
+          <div class="editorBox" #getHTML id="bodyHTML" class="bodyHTML" [dragula]='"choose-component"'><div #editorBox style="display:none"></div></div>
         </div>
     </div>
     <hr>
 </div>
-
 <div #styleBox >
   <app-stylebox></app-stylebox>
 </div>
