--- a/src/app/components/multiple-select/multiple-select.component.html
+++ b/src/app/components/multiple-select/multiple-select.component.html
@@ -1,9 +1,1 @@
-<div class="selectTag">
-  <label></label>
-  <div class="selectCover" id="multselect_{{timestamp}}">
-    <div class="selectLabel"> Title Here</div>
-    <select multiple="true">
-      <option>No Options</option>
-    </select>
-  </div>
-</div>
+<div class="selectTag"><label></label><div class="selectCover" id="multselect_{{timestamp}}"><div class="selectLabel"> Title Here</div><select multiple="true"><option>No Options</option></select></div></div>
